Trigger Action by Issue Event
To test and debug, run action when issue comments are created or deleted.

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,5 +1,7 @@
 name: gh-pages
-on: [push]
+on: 
+  issue_comment:
+    types: [created, deleted]
 jobs:
   gh-pages-deploy:
     runs-on: ubuntu-latest
