--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -19,4 +19,33 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install tox
-          tox -av
+      - name: Create branch gh-pages if necessary
+        shell: bash
+        run: |
+          if [[ -z $(git ls-remote --heads origin gh-pages) ]]; then
+            echo "Creating gh-pages branch"
+            git checkout --orphan gh-pages
+            git reset --hard
+            git commit --allow-empty -m "Create Branch gh-pages"
+            git push origin gh-pages
+            echo "Created gh-pages branch"
+          else
+            echo "Branch gh-pages already exists"
+          fi
+      - name: Checkout main
+        shell: bash
+        run: |
+          git checkout main
+      - name: Build documentation
+        shell: bash
+        run: |
+          tox -e docs
+          ls docs
+      - name: Push documentation to gh-pages
+        shell: bash
+        run: |
+          DIR_HTML="docs/_build/html/"
+          touch $DIR_HTML/.nojekyll
+          git add -f $DIR_HTML
+          git commit -m "Update build documentation"
+          git push --force origin HEAD:gh-pages
